Make our first navbar component and add it in app.js

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* global css */
+
+h1, h2, h3, h4, h5, h6, ul {
+  margin: 0;
+  padding: 0;
+  /* baraye az bein bordan pishfarz tag 'ul' bayad gozashte beshe */
+  list-style: none;
+}
